--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -576,6 +576,7 @@ nav:
           - Language Description: dev/scs/sigma/lang-spec.md
           - Simple Syntax: dev/scs/syntax.md
           - Sigma Propositions: dev/scs/sigma/sigma-prop.md
+          - SigmaBoolean: dev/scs/types/sigmaboolean.md
           - The Blockchain context: dev/scs/blockchain-context.md
           - Accessing boxes and registers: dev/scs/boxes-and-registers.md
           - Global Functions: dev/scs/global-functions.md 
