mining and on-chain nft improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ plugins:
   - search
   - render_swagger:
       allow_arbitrary_locations: true
-  #- neoteroi.mkdocsoad
+  - neoteroi.mkdocsoad
   - mkdocs-jupyter #https://github.com/danielfrg/mkdocs-jupyter
   - section-index #https://github.com/oprypin/mkdocs-section-index
   #- swagger
