--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,14 +174,10 @@ nav:
         - eco/rosen.md
         - Watchers:
           - eco/rosen/rosen-watcher.md
-          - Prerequisites: eco/rosen/rosen-prerequisites.md
-          - Setup Guides:
-            - Mac: eco/rosen/watcher-mac.md
-            - Windows: eco/rosen/watcher-win.md
-            - Linux: eco/rosen/watcher-linux.md
+          - Prerequisites: eco/rosen/rosen-preq.md
         - Guards: eco/rosen/rosen-guard.md
         - Tokenomics: eco/rosen/rosen-tokenomics.md
-        - FAQs: eco/rosen/rosen-faq.md
+        - Team: eco/rosen/rosen-team.md
       - Oracles: 
         - uses/oracles.md
         - Oracle Pools V2: eco/oracles-v2.md
