--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,6 +155,7 @@ nav:
       - ef/ergo-foundation.md
       - Treasury: ef/ef-treasury.md
       - Achievements: ef/ef-achievements.md
+      - Future: ef/ef-future.md
     - Events: 
       - Events: events/index.md
       - ERGOHACK: events/ergohack.md
