integration guide standards ef sigmachains

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -201,9 +201,10 @@ nav:
         - uses/sidechains.md
         - Sub Blocks: uses/sidechains/subblocks.md
         - Sigma Chains: uses/sidechains/sigma-chains.md
-        - ErgoData: uses/ErgoData.md
-        - SentientChain: uses/sentientchain.md
-        - PoUW: uses/pouw.md
+        - Archived:
+          - ErgoData: uses/ErgoData.md
+          - SentientChain: uses/sentientchain.md
+          - PoUW: uses/pouw.md
     - Financial:
       - Stablecoins: 
         - uses/stablecoins.md
