--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -198,8 +198,9 @@ nav:
       - Rosen Bridge:
         - eco/rosen.md
         - Watchers:
-          - eco/rosen/ergo-watcher.md
+          - eco/rosen/watcher.md
           - Prerequisites: eco/rosen/rosen-preq.md
+          - Ergo Watcher: eco/rosen/ergo-watcher.md
           - Bitcoin Watcher: eco/rosen/bitcoin-watcher.md
         - Guards: eco/rosen/rosen-guard.md
         - Tokenomics: eco/rosen/rosen-tokenomics.md
