--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,13 +151,19 @@ nav:
       - Audit: dev/protocol/audit.md
       - The Howey Test: security.md
       - Privacy Guide: doc/privacy-guide.md
-      - Glossary: glossary.md    
-    - Ergo Foundation:
-      - ef/ergo-foundation.md
-      - Scope: ef/ef-scope.md
-      - Treasury: ef/ef-treasury.md
-      - Timeline: ef/ergo-timeline.md
-      - Future: ef/ef-future.md
+      - Glossary: glossary.md
+    - Roadmap: roadmap.md
+    - Entities: 
+      - Ergo Foundation:
+        - ef/ergo-foundation.md
+        - Scope: ef/ef-scope.md
+        - Treasury: ef/ef-treasury.md
+        
+        - Future: ef/ef-future.md
+      - DevDao: devdao.md
+      - Sigmanauts: contribute/sigmanauts.md
+
+      
     - Events: 
       - Events: events/index.md
       - ERGOHACK: events/ergohack.md
